--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "handlebars": "~1.3.0",
     "requirejs-plugins": "~1.0.2",
     "cryptojslib": "~3.1.2",
-    "history.js": "~1.8.0"
+    "history.js": "~1.8.0",
+    "object-fit": "~0.3.4"
   },
   "exportsOverride": {
     "bootstrap": {
@@ -33,7 +34,10 @@
       "fonts": "**/dist/fonts/*.*"
     },
     "history.js": {
-        "": "**/scripts/bundled-uncompressed/html4+html5/*.js"
+      "": "**/scripts/bundled-uncompressed/html4+html5/*.js"
+    },
+    "object-fit": {
+      "": "**/dist/*.js"
     }
   }
 }
