--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.8.2",
     "express": "^4.9.0",
     "handlebars": "~1.3.0",
+    "mongodb": "^1.4.12",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
